# strpool

./: Cargo.toml
src/: lib.rs  static_pool.rs
